// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`splitOnHeader splitOnHeader:false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison> ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/ZGF0ZSB1cGRhdGVk> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/b25l> \\"Two\\", [
		<http://my-vault.org/property/MA==> \\"Two\\" ;
		<http://my-vault.org/property/MQ==> [
			<http://my-vault.org/property/VGhyZWU=> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6'\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=>, <http://my-vault.org/note/QWxpc29uLm1k> ;
	<http://my-vault.org/property/bmFtZQ==> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

<http://my-vault.org/property/c3ViamVjdA==> <http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6\\" .

<http://my-vault.org/property/VG9v> <http://my-vault.org/property/bWFueQ==> \\"inline\\" .

<http://my-vault.org/note/Qm9iLm1k> <http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> .

<http://example.org/file/alice> dot:linktext \\"file.md#Alice\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpc29uLm1k> ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:linktext \\"file.md#Alison\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnHeader splitOnHeader:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison>, [
		dot:linktext \\"file.md#People\\" ;
		dot:contains [
			dot:linktext \\"file.md#Alice\\" ;
			<http://my-vault.org/property/YWdl> \\"37\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		], [
			dot:linktext \\"file.md#Bob\\" ;
			<http://my-vault.org/property/YWdl> \\"42\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		], [
			dot:linktext \\"file.md#Charlie\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Charlie\\" ;
		] ;
	] ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/ZGF0ZSB1cGRhdGVk> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/b25l> \\"Two\\", [
		<http://my-vault.org/property/MA==> \\"Two\\" ;
		<http://my-vault.org/property/MQ==> [
			<http://my-vault.org/property/VGhyZWU=> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6'\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=>, <http://my-vault.org/note/QWxpc29uLm1k> ;
	<http://my-vault.org/property/bmFtZQ==> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

<http://my-vault.org/property/c3ViamVjdA==> <http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6\\" .

<http://my-vault.org/property/VG9v> <http://my-vault.org/property/bWFueQ==> \\"inline\\" .

<http://my-vault.org/note/Qm9iLm1k> <http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> .

<http://example.org/file/alice> dot:linktext \\"file.md#Alice\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpc29uLm1k> ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:linktext \\"file.md#Alison\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnHeader splitOnHeader:true addLabels:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison>, [
		dot:linktext \\"file.md#People\\" ;
		dot:contains [
			dot:linktext \\"file.md#Alice\\" ;
			<http://my-vault.org/property/YWdl> \\"37\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		], [
			dot:linktext \\"file.md#Bob\\" ;
			<http://my-vault.org/property/YWdl> \\"42\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		], [
			dot:linktext \\"file.md#Charlie\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Charlie\\" ;
		] ;
	], [
		dot:linktext \\"file.md#People\\" ;
		dot:contains [
			dot:linktext \\"file.md#Alice\\" ;
			<http://my-vault.org/property/YWdl> \\"37\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
			schema:name \\"Alice\\" ;
		], [
			dot:linktext \\"file.md#Bob\\" ;
			<http://my-vault.org/property/YWdl> \\"42\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
			schema:name \\"Bob\\" ;
		], [
			dot:linktext \\"file.md#Charlie\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Charlie\\" ;
			schema:name \\"Charlie\\" ;
		] ;
		schema:name \\"People\\" ;
	] ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/ZGF0ZSB1cGRhdGVk> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/b25l> \\"Two\\", [
		<http://my-vault.org/property/MA==> \\"Two\\" ;
		<http://my-vault.org/property/MQ==> [
			<http://my-vault.org/property/VGhyZWU=> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6'\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=>, <http://my-vault.org/note/QWxpc29uLm1k> ;
	<http://my-vault.org/property/bmFtZQ==> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

<http://my-vault.org/property/c3ViamVjdA==> <http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6\\" .

<http://my-vault.org/property/VG9v> <http://my-vault.org/property/bWFueQ==> \\"inline\\" .

<http://my-vault.org/note/Qm9iLm1k> <http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> .

<http://example.org/file/alice> dot:linktext \\"file.md#Alice\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpc29uLm1k> ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:linktext \\"file.md#Alison\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnHeader splitOnHeader:true includeWikiPaths:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison>, [
		dot:linktext \\"file.md#People\\" ;
		dot:contains [
			dot:linktext \\"file.md#Alice\\" ;
			<http://my-vault.org/property/YWdl> \\"37\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		], [
			dot:linktext \\"file.md#Bob\\" ;
			<http://my-vault.org/property/YWdl> \\"42\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		], [
			dot:linktext \\"file.md#Charlie\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Charlie\\" ;
		] ;
	], [
		dot:linktext \\"file.md#People\\" ;
		dot:contains [
			dot:linktext \\"file.md#Alice\\" ;
			<http://my-vault.org/property/YWdl> \\"37\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
			schema:name \\"Alice\\" ;
		], [
			dot:linktext \\"file.md#Bob\\" ;
			<http://my-vault.org/property/YWdl> \\"42\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
			schema:name \\"Bob\\" ;
		], [
			dot:linktext \\"file.md#Charlie\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Charlie\\" ;
			schema:name \\"Charlie\\" ;
		] ;
		schema:name \\"People\\" ;
	], [
		dot:linktext \\"file.md#People\\" ;
		dot:contains [
			dot:linktext \\"file.md#Alice\\" ;
			<http://my-vault.org/property/YWdl> \\"37\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		], [
			dot:linktext \\"file.md#Bob\\" ;
			<http://my-vault.org/property/YWdl> \\"42\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		], [
			dot:linktext \\"file.md#Charlie\\" ;
			<http://my-vault.org/property/bmFtZQ==> \\"Charlie\\" ;
		] ;
	] ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/ZGF0ZSB1cGRhdGVk> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/b25l> \\"Two\\", [
		<http://my-vault.org/property/MA==> \\"Two\\" ;
		<http://my-vault.org/property/MQ==> [
			<http://my-vault.org/property/VGhyZWU=> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6'\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=>, <http://my-vault.org/note/QWxpc29uLm1k> ;
	<http://my-vault.org/property/bmFtZQ==> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

<http://my-vault.org/property/c3ViamVjdA==> <http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6\\" .

<http://my-vault.org/property/VG9v> <http://my-vault.org/property/bWFueQ==> \\"inline\\" .

<http://my-vault.org/note/Qm9iLm1k> <http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> .

<http://example.org/file/alice> dot:linktext \\"file.md#Alice\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpc29uLm1k> ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:linktext \\"file.md#Alison\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnId splitOnId:false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	] ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/ZGF0ZSB1cGRhdGVk> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/b25l> \\"Two\\", [
		<http://my-vault.org/property/MA==> \\"Two\\" ;
		<http://my-vault.org/property/MQ==> [
			<http://my-vault.org/property/VGhyZWU=> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6'\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=>, <http://my-vault.org/note/QWxpc29uLm1k> ;
	<http://my-vault.org/property/bmFtZQ==> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

<http://my-vault.org/property/c3ViamVjdA==> <http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6\\" .

<http://my-vault.org/property/VG9v> <http://my-vault.org/property/bWFueQ==> \\"inline\\" .

<http://my-vault.org/note/Qm9iLm1k> <http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> .

"
`;

exports[`splitOnId splitOnId:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison> ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/ZGF0ZSB1cGRhdGVk> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/b25l> \\"Two\\", [
		<http://my-vault.org/property/MA==> \\"Two\\" ;
		<http://my-vault.org/property/MQ==> [
			<http://my-vault.org/property/VGhyZWU=> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6'\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=>, <http://my-vault.org/note/QWxpc29uLm1k> ;
	<http://my-vault.org/property/bmFtZQ==> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

<http://my-vault.org/property/c3ViamVjdA==> <http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6\\" .

<http://my-vault.org/property/VG9v> <http://my-vault.org/property/bWFueQ==> \\"inline\\" .

<http://my-vault.org/note/Qm9iLm1k> <http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> .

<http://example.org/file/alice> dot:linktext \\"file.md#Alice\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpc29uLm1k> .

<http://example.org/file/alison> dot:linktext \\"file.md#Alison\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> .

"
`;

exports[`splitOnId splitOnId:true addLabels:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison> ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/ZGF0ZSB1cGRhdGVk> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/b25l> \\"Two\\", [
		<http://my-vault.org/property/MA==> \\"Two\\" ;
		<http://my-vault.org/property/MQ==> [
			<http://my-vault.org/property/VGhyZWU=> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6'\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=>, <http://my-vault.org/note/QWxpc29uLm1k> ;
	<http://my-vault.org/property/bmFtZQ==> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

<http://my-vault.org/property/c3ViamVjdA==> <http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6\\" .

<http://my-vault.org/property/VG9v> <http://my-vault.org/property/bWFueQ==> \\"inline\\" .

<http://my-vault.org/note/Qm9iLm1k> <http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> .

<http://example.org/file/alice> dot:linktext \\"file.md#Alice\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpc29uLm1k> ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:linktext \\"file.md#Alison\\" ;
	<http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnTag splitOnTag:false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/ZGF0ZSB1cGRhdGVk> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/b25l> \\"Two\\", [
		<http://my-vault.org/property/MA==> \\"Two\\" ;
		<http://my-vault.org/property/MQ==> [
			<http://my-vault.org/property/VGhyZWU=> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6'\\" ;
	<http://my-vault.org/property/bmFtZQ==> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

<http://my-vault.org/property/c3ViamVjdA==> <http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6\\" .

<http://my-vault.org/property/VG9v> <http://my-vault.org/property/bWFueQ==> \\"inline\\" .

<http://my-vault.org/note/Qm9iLm1k> <http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> .

"
`;

exports[`splitOnTag splitOnTag:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
	] ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/ZGF0ZSB1cGRhdGVk> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/b25l> \\"Two\\", [
		<http://my-vault.org/property/MA==> \\"Two\\" ;
		<http://my-vault.org/property/MQ==> [
			<http://my-vault.org/property/VGhyZWU=> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6'\\" ;
	<http://my-vault.org/property/bmFtZQ==> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

<http://my-vault.org/property/c3ViamVjdA==> <http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6\\" .

<http://my-vault.org/property/VG9v> <http://my-vault.org/property/bWFueQ==> \\"inline\\" .

<http://my-vault.org/note/Qm9iLm1k> <http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> .

"
`;

exports[`splitOnTag splitOnTag:true addLabels:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"37\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/YWdl> \\"42\\" ;
		<http://my-vault.org/property/bmFtZQ==> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	] ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/ZGF0ZSB1cGRhdGVk> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/b25l> \\"Two\\", [
		<http://my-vault.org/property/MA==> \\"Two\\" ;
		<http://my-vault.org/property/MQ==> [
			<http://my-vault.org/property/VGhyZWU=> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6'\\" ;
	<http://my-vault.org/property/bmFtZQ==> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

<http://my-vault.org/property/c3ViamVjdA==> <http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6\\" .

<http://my-vault.org/property/VG9v> <http://my-vault.org/property/bWFueQ==> \\"inline\\" .

<http://my-vault.org/note/Qm9iLm1k> <http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> .

"
`;

exports[`toRDF BlockIds 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\" .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

"
`;

exports[`toRDF Inline fields 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\" ;
	<http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\" ;
	<http://my-vault.org/property/ZGF0ZSB1cGRhdGVk> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/b25l> \\"Two\\", [
		<http://my-vault.org/property/MA==> \\"Two\\" ;
		<http://my-vault.org/property/MQ==> [
			<http://my-vault.org/property/VGhyZWU=> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6'\\" .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

<http://my-vault.org/property/c3ViamVjdA==> <http://my-vault.org/property/aW5saW5l> \\"field\\" ;
	<http://my-vault.org/property/KipUaG91Z2h0cyoq> \\"It was decent.\\" ;
	<http://my-vault.org/property/KipSYXRpbmcqKg==> \\"6\\" .

<http://my-vault.org/property/VG9v> <http://my-vault.org/property/bWFueQ==> \\"inline\\" .

<http://my-vault.org/note/Qm9iLm1k> <http://my-vault.org/property/Zm9hZjprbm93cw==> <http://my-vault.org/note/QWxpY2UubWQ=> .

"
`;

exports[`toRDF Links 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> .

"
`;

exports[`toRDF Outline 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> .

"
`;

exports[`toRDF People 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\" ;
	<http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\" .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

"
`;

exports[`toRDF YAML-like 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/> .

"
`;

exports[`toRDF Yaml 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/>, <http://my-vault.org/note/bGluayAxLm1k>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQ=>, <http://my-vault.org/note/L2Z1bGwvcGF0aC9saW5rIDEubWQubWQ=>, <http://example.com>, <http://my-vault.org/note/bGluayAxIC5tZA==>, <http://my-vault.org/note/ZmlsZS5tZC9wcm90b2NvbA==>, <https://example2.com> ;
	<http://my-vault.org/property/aGFzIGltYWdl> <http://my-vault.org/note/aG91c2VzL2ltZy5wbmc=> ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\" ;
	<http://my-vault.org/property/bnVtYmVy> \\"42\\" ;
	<http://my-vault.org/property/YWdl> \\"42\\", \\"56\\" ;
	<http://my-vault.org/property/ZGF0ZSB1cGRhdGVk> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/b25l> \\"Two\\", [
		<http://my-vault.org/property/MA==> \\"Two\\" ;
		<http://my-vault.org/property/MQ==> [
			<http://my-vault.org/property/VGhyZWU=> \\"Other\\" ;
		] ;
	] .

<http://example.org/file/1> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjIubWQ=> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 1\\" .

<http://example.org/file/2> dot:related <http://my-vault.org/note/Qm9iIERldGFpbHMjXjMgLm1k> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 2\\" .

<http://example.org/file/3> dot:related <http://my-vault.org/note/VW5rbm93biNeMS5tZA==> ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/ZGVzY3JpcHRpb24=> \\"Section 3\\" .

"
`;

exports[`toRDF code fence 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/something>, <https://example-2.com/> .

"
`;
